--- a/design.css
+++ b/design.css
@@ -93,6 +93,8 @@ img:hover {
 }
 .opac {
   opacity: 0.7;
+  width: 50vw;
+  height: 5vh;
 }
 form,
 h1,
@@ -105,7 +107,7 @@ h4 {
 }
 #nav-bar {
   background-color: pink;
-
+  z-index: 100;
   height: 50px;
   position: fixed;
   width: 100%;
@@ -119,7 +121,12 @@ h3 {
 body {
   color: black;
   font-family: Georgia, "Times New Roman", Times, serif;
-  background-image: url("images/purple.jpg");
+  background-image: linear-gradient(
+    90deg,
+    rgb(32, 30, 32),
+    rgb(82, 27, 82),
+    rgb(226, 122, 200)
+  );
   background-size: 100%;
   mix-blend-mode: color;
 }
